--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "homepage": "https://github.com/ymc-github/yors/blob/main/#readme",
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "@types/node": "^20.11.30",
+    "rollup": "^4.13.0",
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.6"
+  }
 }
