--- a/packages/nano/package.json
+++ b/packages/nano/package.json
@@ -14,12 +14,12 @@
   "license": "MIT",
   "private": true,
   "main": "./dist/main.cjs",
-  "module": "./dist/main.js",
+  "module": "./dist/main.mjs",
   "types": "./dist/main.d.ts",
   "exports": {
     ".": {
       "types": "./dist/main.d.ts",
-      "import": "./dist/main.js",
+      "import": "./dist/main.mjs",
       "require": "./dist/main.cjs"
     },
     "./*": "./*"
