build(core): update nanz

--- a/packages/nanz/.eslintrc.json
+++ b/packages/nanz/.eslintrc.json
@@ -30,5 +30,10 @@
       "@typescript-eslint"
   ],
   "rules": {
+    "prefer-const":["off"],
+    "no-useless-escape":["off"],
+    "@typescript-eslint/no-unused-vars":["warn"],
+    "@typescript-eslint/no-explicit-any":["off"],
+    "@typescript-eslint/ban-ts-comment":["off"]
   }
 }
