--- a/package.json
+++ b/package.json
@@ -24,8 +24,21 @@
     "@types/node": "^20.11.30",
     "rollup": "^4.13.0",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.6"
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@yors/vite-plugin-make-type": "^1.2.0",
+    "@yors/vite-plugin-mini-js": "^1.2.0",
+    "@yors/vite-plugin-util-nano": "^1.2.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.12",
+    "vite-plugin-eslint": "^1.8.1",
+    "vitest": "^1.6.0"
   },
   "scripts": {
     "build": "turbo run build",
